--- a/index.html
+++ b/index.html
@@ -2,7 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Hey UtahJS</title>
+      <title>Hey UtahJS</title>
+      <style>
+        .chart {
+          height: 500px;
+          width: 500px;
+        }
+        svg {
+          height: 500px;
+          width: 500px;
+        }
+      </style>
   </head>
   <body>
     <div id="react"></div>
