--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
           vertical-align: center;
           color: white;
           line-height: 2em;
+          position: relative;
+        }
+        .funnel-piece-label {
+          position: absolute;
+          top: 50%;
+          left: 0px;
+          right: 0px;
+          transform: translateY(-50%);
+          text-transform: uppercase;
         }
         .funnel-piece:first-child {
           border-width: 0;
